--- a/style.css
+++ b/style.css
@@ -3,3 +3,58 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    background-color: lightskyblue;
+
+    user-select: none;
+}
+
+.container {
+    border-radius: 10px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    background-color: darkslategray;
+    gap: 5px;
+    padding: 10px;
+
+    flex-basis: 337px;
+    flex-wrap: wrap;
+
+}
+.display {
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: lightblue;
+
+    flex-basis: 315px;
+    height: 75px;
+}
+.container .equals {
+    flex-basis: 155px;
+}
+.btn {
+    border-radius: 10px;
+    border: 1px solid black;
+    background-color: lightblue;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    flex-basis: 75px;
+    height: 75px;
+}
+.btn:hover {
+    background-color: lightgray;
+}
+.btn:active {
+    background-color: gray;
+}
