--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
 .btn {
     border-radius: 10px;
     border: 1px solid black;
+    font-size: 20px;
     background-color: lightblue;
     display: flex;
     align-items: center;
