--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@
     --BORDER-COLORS: #111;
 
     --DISPLAY-COLOR: #222;
-
-    --BTN-COLOR: hsl(165, 18%, 60%);
+    
+    --BTN-BG-COLOR: hsl(165, 18%, 60%);
     --BTN-HOVER-COLOR: hsl(165, 18%, 50%);
     --BTN-ACTIVE-COLOR: hsl(165, 18%, 40%);
     --BTN-TOGGLE-COLOR: hsl(232, 71%, 60%);
@@ -53,7 +53,7 @@ body {
     border-radius: 10px;
     color: var(--DISPLAY-COLOR);
     border: 2px solid var(--BORDER-COLORS);
-    background-color: var(--BTN-COLOR);
+    background-color: var(--BTN-BG-COLOR);
 
     flex-basis: 315px;
     flex-grow: 0;
@@ -73,10 +73,11 @@ body {
     flex-basis: 315px;
 }
 .btn {
+    color: var(--DISPLAY-COLOR);
     border-radius: 10px;
     border: 2px solid var(--BORDER-COLORS);
     font-size: 20px;
-    background-color: var(--BTN-COLOR);
+    background-color: var(--BTN-BG-COLOR);
     display: flex;
     align-items: center;
     justify-content: center;
