--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     --BORDER-COLORS: #111;
 
     --DISPLAY-COLOR: #222;
-    
+
     --BTN-BG-COLOR: hsl(165, 18%, 60%);
     --BTN-HOVER-COLOR: hsl(165, 18%, 50%);
     --BTN-ACTIVE-COLOR: hsl(165, 18%, 40%);
@@ -26,6 +26,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    gap: 50px;
 
     background-color: var(--BG-COLOR);
 
@@ -100,4 +101,34 @@ body {
 }
 .toggle:active {
     background-color: var(--BTN-TOGGLE-ACTIVE-COLOR);
+}
+
+.keybinds {
+    padding: 10px;
+    height: 580px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.keybinds ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.keybinds li {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+.keybinds span {
+    color: var(--DISPLAY-COLOR);
+    border-radius: 5px;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--BTN-BG-COLOR);
 }
